Update job provider profile for individual employers - remove company info, add personal info, update translations

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -282,6 +282,17 @@
   "invalid_credentials": "Invalid credentials",
   "profile": "Profile",
   "personal_information": "Personal Information",
+  "personal_information": "Personal Information",
+  "company_name": "Company Name",
+  "company_website": "Company Website",
+  "company_description": "Company Description",
+  "please_enter_company_name": "Please enter company name",
+  "posted_jobs": "Posted Jobs",
+  "active_jobs": "Active Jobs",
+  "applications": "Applications",
+  "applications_received": "Applications Received",
+  "viewing_posted_jobs": "Viewing posted jobs",
+  "viewing_applications": "Viewing applications",
   "company_information": "Company Information",
   "settings": "Settings",
   "manage_notifications": "Manage your notifications",
@@ -383,6 +394,8 @@
   "wallet_info": "Wallet Info",
   "recent_transactions": "Recent Transactions",
   "view_all": "View All",
+  "edit_profile": "Edit Profile",
+  "full_name": "Full Name",
   "no_transactions": "No transactions yet",
   "top_up_wallet": "Top Up Wallet",
   "select_amount": "Select Amount",
