--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -13,6 +13,18 @@
   "post_job": "Tuma Kazi",
   "my_jobs": "Kazi Zangu",
   "profile": "Wasifu",
+  "personal_information": "Taarifa za Mtu",
+  "company_name": "Jina la Kampuni",
+  "company_name": "Jina la Kampuni",
+  "company_website": "Tovuti ya Kampuni",
+  "company_description": "Maelezo ya Kampuni",
+  "please_enter_company_name": "Tafadhali weka jina la kampuni",
+  "posted_jobs": "Kazi Zilizotangazwa",
+  "active_jobs": "Kazi Zinazofanya Kazi",
+  "applications": "Maombi",
+  "applications_received": "Maombi Yaliyopokelewa",
+  "viewing_posted_jobs": "Tazama kazi zilizotangazwa",
+  "viewing_applications": "Tazama maombi",
   "settings": "Mipangilio",
   "notifications": "Arifa",
   "chat": "Mazungumzo",
@@ -368,6 +380,8 @@
   "wallet_info": "Maelezo ya Mkoba",
   "recent_transactions": "Miamala ya Hivi Karibuni",
   "view_all": "Onyesha Yote",
+  "edit_profile": "Hariri Wasifu",
+  "full_name": "Jina Kamili",
   "no_transactions": "Hakuna miamala bado",
   "top_up_wallet": "Ongeza Pesa kwenye Mkoba",
   "select_amount": "Chagua Kiasi",
