feat: Add Instagram/Twitter style job cards with images and optional image upload for job providers

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -98,6 +98,12 @@
   "select_all": "Select All",
   "clear": "Clear",
   "reset": "Reset",
+  "job_image": "Job Image",
+  "optional": "Optional",
+  "add_job_image": "Add Job Image",
+  "image_optional_desc": "Adding an image helps attract more workers",
+  "add_image": "Add Image",
+  "image_selected": "Image selected successfully",
   "update": "Update",
   "create": "Create",
   "add": "Add",
@@ -394,8 +400,18 @@
   "wallet_info": "Wallet Info",
   "recent_transactions": "Recent Transactions",
   "view_all": "View All",
+  "view_applicants": "View Applicants",
+  "view_profile": "View Profile",
+  "applicant_details": "Applicant Details",
+  "job_details": "Job Details",
+  "view_applicants": "View Applicants",
+  "view_profile": "View Profile",
   "edit_profile": "Edit Profile",
   "full_name": "Full Name",
+  "view_applicants": "View Applicants",
+  "view_profile": "View Profile",
+  "applicant_details": "Applicant Details",
+  "job_details": "Job Details",
   "no_transactions": "No transactions yet",
   "top_up_wallet": "Top Up Wallet",
   "select_amount": "Select Amount",
