--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -110,6 +110,12 @@
   "select_all": "Chagua Yote",
   "clear": "Futa",
   "reset": "Weka upya",
+  "job_image": "Picha ya Kazi",
+  "optional": "Hiari",
+  "add_job_image": "Ongeza Picha ya Kazi",
+  "image_optional_desc": "Kuongeza picha husaidia kuvutia wafanyakazi zaidi",
+  "add_image": "Ongeza Picha",
+  "image_selected": "Picha imechaguliwa kwa mafanikio",
   "update": "Sasisha",
   "create": "Unda",
   "add": "Ongeza",
@@ -379,9 +385,19 @@
   "info": "Maelezo",
   "wallet_info": "Maelezo ya Mkoba",
   "recent_transactions": "Miamala ya Hivi Karibuni",
-  "view_all": "Onyesha Yote",
+  "view_all": "Tazama Yote",
+  "view_applicants": "Waombaji",
+  "view_profile": "Tazama Wasifu",
+  "applicant_details": "Maelezo ya Mwombaji",
+  "job_details": "Maelezo ya Kazi",
   "edit_profile": "Hariri Wasifu",
   "full_name": "Jina Kamili",
+  "view_applicants": "Waombaji",
+  "view_profile": "Tazama Wasifu",
+  "applicant_details": "Maelezo ya Mwombaji",
+  "job_details": "Maelezo ya Kazi",
+  "view_applicants": "Waombaji",
+  "view_profile": "Tazama Wasifu",
   "no_transactions": "Hakuna miamala bado",
   "top_up_wallet": "Ongeza Pesa kwenye Mkoba",
   "select_amount": "Chagua Kiasi",
