Update job doer profile design to match job giver profile style - Improved profile header with premium card design and stats - Updated personal info section with info rows instead of form fields - Enhanced language settings with FilterChip design - Updated action buttons layout to match company profile style - Fixed circular button shapes on job cards - Added Instagram/Twitter style job cards with images - Implemented optional image upload for job providers - Enhanced job details with full-width images and overlay - Simplified provider profile section

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -104,6 +104,11 @@
   "image_optional_desc": "Adding an image helps attract more workers",
   "add_image": "Add Image",
   "image_selected": "Image selected successfully",
+  "verified": "Verified",
+  "jobs_posted": "Jobs Posted",
+  "workers_hired": "Workers Hired",
+  "response_time": "Response Time",
+  "view_full_profile": "View Full Profile",
   "update": "Update",
   "create": "Create",
   "add": "Add",
