--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -116,6 +116,11 @@
   "image_optional_desc": "Kuongeza picha husaidia kuvutia wafanyakazi zaidi",
   "add_image": "Ongeza Picha",
   "image_selected": "Picha imechaguliwa kwa mafanikio",
+  "verified": "Imethibitishwa",
+  "jobs_posted": "Kazi Zilizotangazwa",
+  "workers_hired": "Wafanyakazi Walioajiriwa",
+  "response_time": "Muda wa Majibu",
+  "view_full_profile": "Tazama Wasifu Kamili",
   "update": "Sasisha",
   "create": "Unda",
   "add": "Ongeza",
