feat: implement consistent green theme across all screens and fix unmounted widget errors

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -39,5 +39,191 @@
   "complete_registration": "Complete Registration",
   "send_otp": "Send OTP",
   "select_language": "Select Language",
-  "language_changed": "Language changed"
+  "language_changed": "Language changed",
+  "cancel": "Cancel",
+  "profile": "Profile",
+  "profile_updated": "Profile updated successfully",
+  "language": "Language",
+  "change_password": "Change Password",
+  "balance": "Balance",
+  "add_balance": "Add Balance",
+  "messages": "Messages",
+  "notifications": "Notifications",
+  "near": "Near",
+  "save": "Save",
+  "edit": "Edit",
+  "delete": "Delete",
+  "search": "Search",
+  "search_jobs": "Search Jobs",
+  "post_job": "Post Job",
+  "my_jobs": "My Jobs",
+  "applied_jobs": "Applied Jobs",
+  "completed_jobs": "Completed Jobs",
+  "posted_jobs": "Posted Jobs",
+  "applications_received": "Applications Received",
+  "job_details": "Job Details",
+  "apply": "Apply",
+  "apply_for_job": "Apply for Job",
+  "job_title": "Job Title",
+  "job_description": "Job Description",
+  "location": "Location",
+  "salary": "Salary",
+  "payment": "Payment",
+  "requirements": "Requirements",
+  "company": "Company",
+  "company_profile": "Company Profile",
+  "contact": "Contact",
+  "about": "About",
+  "settings": "Settings",
+  "logout": "Logout",
+  "logout_confirmation": "Are you sure you want to logout?",
+  "yes": "Yes",
+  "no": "No",
+  "ok": "OK",
+  "error": "Error",
+  "success": "Success",
+  "warning": "Warning",
+  "info": "Information",
+  "loading": "Loading...",
+  "no_data": "No data available",
+  "no_jobs_found": "No jobs found",
+  "no_notifications": "No notifications",
+  "no_messages": "No messages",
+  "new_job": "New Job",
+  "job_application": "Job Application",
+  "application_sent": "Application sent successfully",
+  "application_failed": "Failed to send application",
+  "verification": "Verification",
+  "verification_status": "Verification Status",
+  "verified": "Verified",
+  "unverified": "Unverified",
+  "pending": "Pending",
+  "rejected": "Rejected",
+  "upload_id": "Upload ID",
+  "upload_document": "Upload Document",
+  "camera": "Camera",
+  "gallery": "Gallery",
+  "document_uploaded": "Document uploaded successfully",
+  "document_upload_failed": "Failed to upload document",
+  "wallet": "Wallet",
+  "top_up": "Top Up",
+  "withdraw": "Withdraw",
+  "transaction_history": "Transaction History",
+  "amount": "Amount",
+  "enter_amount": "Enter amount",
+  "payment_method": "Payment Method",
+  "mobile_money": "Mobile Money",
+  "bank_transfer": "Bank Transfer",
+  "card_payment": "Card Payment",
+  "payment_successful": "Payment successful",
+  "payment_failed": "Payment failed",
+  "chat": "Chat",
+  "send_message": "Send message",
+  "type_message": "Type a message...",
+  "online": "Online",
+  "offline": "Offline",
+  "last_seen": "Last seen",
+  "today": "Today",
+  "yesterday": "Yesterday",
+  "location_permission": "Location Permission",
+  "location_permission_required": "Location permission is required to find jobs near you",
+  "enable_location": "Enable Location",
+  "location_disabled": "Location is disabled",
+  "notification_permission": "Notification Permission",
+  "notification_permission_required": "Notification permission is required to receive job updates",
+  "enable_notifications": "Enable Notifications",
+  "notifications_disabled": "Notifications are disabled",
+  "create_your_account": "Create your account",
+  "confirm_password_label": "Confirm Password",
+  "please_confirm_password": "Please confirm password",
+  "passwords_mismatch": "Passwords don't match",
+  "welcome_message": "Welcome back! 👋",
+  "job_seeker_dashboard": "Job Seeker Dashboard",
+  "job_provider_dashboard": "Job Provider Dashboard",
+  "recent_jobs": "Recent Jobs",
+  "view_all_jobs": "View All Jobs",
+  "quick_actions": "Quick Actions",
+  "find_jobs": "Find Jobs",
+  "my_applications": "My Applications",
+  "earnings": "Earnings",
+  "post_new_job": "Post New Job",
+  "manage_jobs": "Manage Jobs",
+  "view_applications": "View Applications",
+  "revenue": "Revenue",
+  "active_jobs": "Active Jobs",
+  "total_applications": "Total Applications",
+  "pending_applications": "Pending Applications",
+  "accepted_applications": "Accepted Applications",
+  "rejected_applications": "Rejected Applications",
+  "job_status": "Job Status",
+  "active": "Active",
+  "inactive": "Inactive",
+  "completed": "Completed",
+  "cancelled": "Cancelled",
+  "application_status": "Application Status",
+  "accepted": "Accepted",
+  "rejected": "Rejected",
+  "under_review": "Under Review",
+  "interview_scheduled": "Interview Scheduled",
+  "work_started": "Work Started",
+  "work_completed": "Work Completed",
+  "payment_pending": "Payment Pending",
+  "payment_completed": "Payment Completed",
+  "rate_job": "Rate Job",
+  "rate_provider": "Rate Provider",
+  "rating": "Rating",
+  "review": "Review",
+  "write_review": "Write Review",
+  "submit_review": "Submit Review",
+  "reviews": "Reviews",
+  "average_rating": "Average Rating",
+  "total_reviews": "Total Reviews",
+  "filter": "Filter",
+  "sort": "Sort",
+  "sort_by": "Sort by",
+  "date": "Date",
+  "price": "Price",
+  "distance": "Distance",
+  "relevance": "Relevance",
+  "clear_filters": "Clear Filters",
+  "apply_filters": "Apply Filters",
+  "distance_km": "km away",
+  "posted": "Posted",
+  "ago": "ago",
+  "hours": "hours",
+  "days": "days",
+  "weeks": "weeks",
+  "months": "months",
+  "years": "years",
+  "just_now": "Just now",
+  "less_than_minute": "Less than a minute",
+  "minute": "minute",
+  "minutes": "minutes",
+  "hour": "hour",
+  "day": "day",
+  "week": "week",
+  "month": "month",
+  "year": "year",
+  "directions": "Directions",
+  "all": "All",
+  "jobs": "Jobs",
+  "payments": "Payments",
+  "current_balance": "Current Balance",
+  "history": "History",
+  "view_all": "View All",
+  "wallet_help": "Wallet Help",
+  "wallet_help_message": "Need help with your wallet?",
+  "wallet_info": "Wallet Information",
+  "application_fee_info": "Application fee: TZS 500 per job application",
+  "top_up_info": "Top up your wallet to apply for jobs",
+  "bonus_info": "Get bonus for completing jobs",
+  "error_loading_messages": "Error loading messages",
+  "please_try_again": "Please try again later",
+  "find_people_to_chat": "Find People to Chat",
+  "app_tagline": "Kazi Huru - Free Jobs",
+  "location_updated_successfully": "Location updated successfully!",
+  "failed_to_get_location": "Failed to get location",
+  "add": "Add",
+  "person": "person",
+  "add_image": "Add Image"
 } 
