--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -39,5 +39,191 @@
   "complete_registration": "Maliza usajili",
   "send_otp": "Tuma OTP",
   "select_language": "Chagua lugha",
-  "language_changed": "Lugha imebadilishwa"
+  "language_changed": "Lugha imebadilishwa",
+  "cancel": "Ghairi",
+  "profile": "Wasifu",
+  "profile_updated": "Wasifu umesasishwa",
+  "language": "Lugha",
+  "change_password": "Badilisha nywila",
+  "balance": "Salio",
+  "add_balance": "Ongeza salio",
+  "messages": "Ujumbe",
+  "notifications": "Arifa",
+  "near": "Karibu",
+  "save": "Hifadhi",
+  "edit": "Hariri",
+  "delete": "Futa",
+  "search": "Tafuta",
+  "search_jobs": "Tafuta kazi",
+  "post_job": "Chapisha kazi",
+  "my_jobs": "Kazi zangu",
+  "applied_jobs": "Kazi zilizoombiwa",
+  "completed_jobs": "Kazi zilizokamilika",
+  "posted_jobs": "Kazi zilizochapishwa",
+  "applications_received": "Maombi yaliyopokelewa",
+  "job_details": "Maelezo ya kazi",
+  "apply": "Omba",
+  "apply_for_job": "Omba kazi",
+  "job_title": "Jina la kazi",
+  "job_description": "Maelezo ya kazi",
+  "location": "Mahali",
+  "salary": "Mshahara",
+  "payment": "Malipo",
+  "requirements": "Mahitaji",
+  "company": "Kampuni",
+  "company_profile": "Wasifu wa kampuni",
+  "contact": "Wasiliana",
+  "about": "Kuhusu",
+  "settings": "Mipangilio",
+  "logout": "Ondoka",
+  "logout_confirmation": "Una uhakika unataka kuondoka?",
+  "yes": "Ndiyo",
+  "no": "Hapana",
+  "ok": "Sawa",
+  "error": "Hitilafu",
+  "success": "Imefanikiwa",
+  "warning": "Onyo",
+  "info": "Maelezo",
+  "loading": "Inapakia...",
+  "no_data": "Hakuna data",
+  "no_jobs_found": "Hakuna kazi zilizopatikana",
+  "no_notifications": "Hakuna arifa",
+  "no_messages": "Hakuna ujumbe",
+  "new_job": "Kazi mpya",
+  "job_application": "Ombi la kazi",
+  "application_sent": "Ombi limepelekwa",
+  "application_failed": "Ombi halikufaulu",
+  "verification": "Uthibitisho",
+  "verification_status": "Hali ya uthibitisho",
+  "verified": "Imethibitishwa",
+  "unverified": "Haijathibitishwa",
+  "pending": "Inasubiri",
+  "rejected": "Imekataliwa",
+  "upload_id": "Pakia kitambulisho",
+  "upload_document": "Pakia nyaraka",
+  "camera": "Kamera",
+  "gallery": "Galeri",
+  "document_uploaded": "Nyaraka imepakiwa",
+  "document_upload_failed": "Kupakia nyaraka hakukufaulu",
+  "wallet": "Mkoba",
+  "top_up": "Jaza",
+  "withdraw": "Toa",
+  "transaction_history": "Historia ya muamala",
+  "amount": "Kiasi",
+  "enter_amount": "Weka kiasi",
+  "payment_method": "Njia ya malipo",
+  "mobile_money": "Pesa ya simu",
+  "bank_transfer": "Uhamisho wa benki",
+  "card_payment": "Malipo ya kadi",
+  "payment_successful": "Malipo yamefanikiwa",
+  "payment_failed": "Malipo hayakufaulu",
+  "chat": "Mazungumzo",
+  "send_message": "Tuma ujumbe",
+  "type_message": "Andika ujumbe...",
+  "online": "Mtandaoni",
+  "offline": "Nje ya mtandao",
+  "last_seen": "Mwisho kuonekana",
+  "today": "Leo",
+  "yesterday": "Jana",
+  "location_permission": "Ruhusa ya mahali",
+  "location_permission_required": "Ruhusa ya mahali inahitajika kupata kazi karibu nawe",
+  "enable_location": "Washa mahali",
+  "location_disabled": "Mahali yamezimwa",
+  "notification_permission": "Ruhusa ya arifa",
+  "notification_permission_required": "Ruhusa ya arifa inahitajika kupata sasisho za kazi",
+  "enable_notifications": "Washa arifa",
+  "notifications_disabled": "Arifa zimezimwa",
+  "create_your_account": "Unda akaunti yako",
+  "confirm_password_label": "Thibitisha nywila",
+  "please_confirm_password": "Tafadhali thibitisha nywila",
+  "passwords_mismatch": "Nywila hazifanani",
+  "welcome_message": "Karibu tena! 👋",
+  "job_seeker_dashboard": "Dashibodi ya mtafuta kazi",
+  "job_provider_dashboard": "Dashibodi ya mtoa kazi",
+  "recent_jobs": "Kazi za hivi karibuni",
+  "view_all_jobs": "Ona kazi zote",
+  "quick_actions": "Vitendo vya haraka",
+  "find_jobs": "Tafuta kazi",
+  "my_applications": "Maombi yangu",
+  "earnings": "Mapato",
+  "post_new_job": "Chapisha kazi mpya",
+  "manage_jobs": "Dhibiti kazi",
+  "view_applications": "Ona maombi",
+  "revenue": "Mapato",
+  "active_jobs": "Kazi zinazofanya kazi",
+  "total_applications": "Jumla ya maombi",
+  "pending_applications": "Maombi yanayosubiri",
+  "accepted_applications": "Maombi yaliyokubaliwa",
+  "rejected_applications": "Maombi yaliyokataliwa",
+  "job_status": "Hali ya kazi",
+  "active": "Inafanya kazi",
+  "inactive": "Haifanyi kazi",
+  "completed": "Imekamilika",
+  "cancelled": "Imesitishwa",
+  "application_status": "Hali ya ombi",
+  "accepted": "Imekubaliwa",
+  "rejected": "Imekataliwa",
+  "under_review": "Inachunguzwa",
+  "interview_scheduled": "Mahojiano yamepangwa",
+  "work_started": "Kazi imeanza",
+  "work_completed": "Kazi imekamilika",
+  "payment_pending": "Malipo yanasubiri",
+  "payment_completed": "Malipo yamekamilika",
+  "rate_job": "Pima kazi",
+  "rate_provider": "Pima mtoa kazi",
+  "rating": "Uthamini",
+  "review": "Tathmini",
+  "write_review": "Andika tathmini",
+  "submit_review": "Wasilisha tathmini",
+  "reviews": "Tathmini",
+  "average_rating": "Wastani wa uthamini",
+  "total_reviews": "Jumla ya tathmini",
+  "filter": "Chuja",
+  "sort": "Panga",
+  "sort_by": "Panga kwa",
+  "date": "Tarehe",
+  "price": "Bei",
+  "distance": "Umbali",
+  "relevance": "Muhimu",
+  "clear_filters": "Futa vichujio",
+  "apply_filters": "Tumia vichujio",
+  "distance_km": "km mbali",
+  "posted": "Imechapishwa",
+  "ago": "iliyopita",
+  "hours": "masaa",
+  "days": "siku",
+  "weeks": "wiki",
+  "months": "miezi",
+  "years": "miaka",
+  "just_now": "Sasa hivi",
+  "less_than_minute": "Chini ya dakika moja",
+  "minute": "dakika",
+  "minutes": "dakika",
+  "hour": "saa",
+  "day": "siku",
+  "week": "wiki",
+  "month": "mwezi",
+  "year": "mwaka",
+  "directions": "Maelekezo",
+  "all": "Zote",
+  "jobs": "Kazi",
+  "payments": "Malipo",
+  "current_balance": "Salio la Sasa",
+  "history": "Historia",
+  "view_all": "Ona Zote",
+  "wallet_help": "Msaada wa Mkoba",
+  "wallet_help_message": "Unahitaji msaada na mkoba wako?",
+  "wallet_info": "Maelezo ya Mkoba",
+  "application_fee_info": "Ada ya ombi: TZS 500 kwa kila ombi la kazi",
+  "top_up_info": "Jaza mkoba wako kuomba kazi",
+  "bonus_info": "Pata bonus kwa kukamilisha kazi",
+  "error_loading_messages": "Hitilafu kupakia ujumbe",
+  "please_try_again": "Tafadhali jaribu tena baadaye",
+  "find_people_to_chat": "Tafuta Watu wa Kuzungumza",
+  "app_tagline": "Kazi Huru - Kazi Huru",
+  "location_updated_successfully": "Mahali pamesasishwa!",
+  "failed_to_get_location": "Imeshindwa kupata mahali",
+  "add": "Ongeza",
+  "person": "mtu",
+  "add_image": "Ongeza Picha"
 } 
